MPIJob data model

--- a/apps/shoc-package/Shoc.Package.Templating/Shoc.Package.Templating.csproj
+++ b/apps/shoc-package/Shoc.Package.Templating/Shoc.Package.Templating.csproj
@@ -19,9 +19,6 @@
       <None Update="Templates\alpine\build-spec.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="Templates\alpine\variant-1\Containerfile.tpl">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
       <None Update="Templates\alpine\Examples.md">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
@@ -32,6 +29,27 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="Templates\alpine\metadata.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Templates\mpi\build-spec.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Templates\mpi\Containerfile.tpl">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Templates\mpi\Examples.md">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Templates\mpi\metadata.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Templates\mpi\Overview.md">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Templates\mpi\runtime.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="Templates\mpi\Specification.md">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
