--- a/apps/shoc-job/Shoc.Job/Shoc.Job.csproj
+++ b/apps/shoc-job/Shoc.Job/Shoc.Job.csproj
@@ -38,5 +38,8 @@
     <None Include="../.dockerignore" Link=".dockerignore">
       <DependentUpon>$(DockerDefaultDockerfile)</DependentUpon>
     </None>
+    <None Update="K8s\Scripts\Mpi\mpiw.sh">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
